--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -14,6 +14,9 @@
     src: url("https://frontenduiux.github.io/OBB_ETenders/fonts/Co%20Headline.otf");
 	font-weight:400;
 }
+html:not(.designer) [name="SignUpButton"]:hover{
+    background-color: var(--orange-hover)!important;
+}
 /* PADDINGS */
 /* PADDING 1rem - top, bottom, left, right */
 [name*="pt-1"]{
