--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -14,7 +14,8 @@
     src: url("https://frontenduiux.github.io/OBB_ETenders/fonts/Co%20Headline.otf");
 	font-weight:400;
 }
-html:not(.designer) [name="SignUpButton"]:hover{
+html:not(.designer) [name="SignUpButton"]:hover,
+html:not(.designer) [name="LoginButton"]:hover{
     background-color: var(--orange-hover)!important;
 }
 /* PADDINGS */
