--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -9,6 +9,10 @@
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
+html:not(.designer) [name="SignUpButton"]:hover,
+html:not(.designer) [name="LoginButton"]:hover{
+    background-color: var(--orange-hover)!important;
+}
 @font-face {
     font-family:"Co Headline" ;
     src: url("https://frontenduiux.github.io/OBB_ETenders/fonts/Co%20Headline.otf");
