--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -18,9 +18,11 @@ html:not(.designer) [name="LoginButton"]:hover{
     src: url("https://frontenduiux.github.io/OBB_ETenders/fonts/Co%20Headline.otf");
 	font-weight:400;
 }
-html:not(.designer) [name="SignUpButton"]:hover,
-html:not(.designer) [name="LoginButton"]:hover{
+html:not(.designer) [name="SignUpButton"]:hover{
     background-color: var(--orange-hover)!important;
+}
+html:not(.designer) [name="LoginButton"]:hover{
+    color: var(--orange-hover)!important;
 }
 /* PADDINGS */
 /* PADDING 1rem - top, bottom, left, right */
