--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -9,16 +9,18 @@
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
+html:not(.designer) [name="SignUpButton"]:hover,
+html:not(.designer) [name="LoginButton"]:hover{
+    background-color: var(--orange-hover)!important;
+}
 @font-face {
     font-family:"Co Headline" ;
     src: url("https://frontenduiux.github.io/OBB_ETenders/fonts/Co%20Headline.otf");
 	font-weight:400;
 }
-html:not(.designer) [name="SignUpButton"]:hover{
-    background-color: var(--orange-hover)!important;
-}
+html:not(.designer) [name="SignUpButton"]:hover,
 html:not(.designer) [name="LoginButton"]:hover{
-    color: var(--orange-hover)!important;
+    background-color: var(--orange-hover)!important;
 }
 /* PADDINGS */
 /* PADDING 1rem - top, bottom, left, right */
@@ -696,6 +698,12 @@ html:not(.designer) .theme-entry .grid .grid-column-header-cell{
 .sidebar {
     width: 12vw;
     padding: 2vw;
+}
+	html:not(.designer) .theme-entry.sidebarAvailable{
+	left: 16vw;
+	width: calc(100%  - 16vw);
+	padding: 0 1vw;
+	position: relative;
 }
 .navbarBrand a{width: 9vw;}
 }
