--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -674,14 +674,19 @@ html:not(.designer) .theme-entry .grid table.grid-column-header-table td{
 	border-right: 1px solid rgb(220 220 220 / 80%);
 	cursor: pointer;
 }
+html:not(.designer) .theme-entry td span.runtime-list-item{
+	font-family: var(--regularFont)!important;
+	font-weight: 300!important;
+	padding: 1.3rem 1.3rem!important;
+}
 html:not(.designer) .theme-entry .grid table.grid-column-header-table td:last-child{
 	border:none!important;
 }
 html:not(.designer) .theme-entry table.grid-column-header-table {
-    border: 1px solid rgb(220 220 220 / 80%);
-    border-bottom: none;
+    border-bottom: 1px solid rgb(220 220 220 / 80%);
+   /* border-bottom: none;
     border-top-left-radius: 2rem;
-    border-top-right-radius: 2rem;
+    border-top-right-radius: 2rem; */
     background-color:transparent!important;
 }
 html:not(.designer) .theme-entry  .grid-column-headers{
@@ -692,6 +697,86 @@ html:not(.designer) .theme-entry .grid .grid-column-header-text{
 }
 html:not(.designer) .theme-entry .grid .grid-column-header-cell{
 	padding:1rem 1.4rem;
+}
+html:not(.designer) .theme-entry .grid table.grid-content-table.zebra-stripes tr{
+	background-color: transparent;
+	padding:1rem 0!important;
+}
+html:not(.designer) .theme-entry .grid table.grid-content-table.zebra-stripes tr:nth-child(even){
+	background-color:#F2F2F6!important;
+}
+html:not(.designer) .grid-body{
+	margin: 1rem!important;
+	width: calc(100% - 2rem);
+	border: 1px solid rgb(220 220 220 / 80%)!important;
+	border-radius: 2rem;
+}
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Saved"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Submitted"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Rejected"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Open"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Approve"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Completed"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting RM Approval"],
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting Return"]{
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	vertical-align:middle;
+	height: 4.4rem!important;
+}
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Saved"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Submitted"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Rejected"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Open"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Approve"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Completed"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting RM Approval"] >span.runtime-list-item,
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting Return"] >span.runtime-list-item{
+	border-radius:2rem;
+	min-height:unset!important;
+	height:unset!important;
+	line-height:unset!important;
+	padding: 0.6rem 2rem!important;
+	width:fit-content!important;
+}
+.grid-content-cell-wrapper[title*="Saved"] >span.runtime-list-item,
+.grid-content-cell-wrapper[title*="Completed"] >span.runtime-list-item{
+	background-color:#DCFCE7;
+	color:#17A34A!important;
+}
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Submitted"] >span.runtime-list-item{
+	background-color:#ECEEF8;
+	color:#3F51B5!important;
+	padding: 0.6rem 1.2rem!important;
+}
+html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Rejected"] >span.runtime-list-item{
+	background-color:#F4EBEE;
+	color:#801533!important;
+	padding: 0.6rem 1.2rem!important;
+}
+html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Waiting RM Approval"] >span{
+	color:#FF9800!important;
+	background-color:#FFF5E5!important;
+	padding: 0.6rem 1.2rem!important;
+}
+html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Waiting Return"] >span{
+	color:#D19D00!important;
+	background-color:#FAF5E5!important;
+	padding: 0.6rem 1.2rem!important;
+}
+html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Approve"] >span{
+	color:#009688!important;
+	background-color:#E5F4F3!important;
+	padding: 0.6rem 1.2rem!important;
+}
+html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Open"] >span{
+	color:#2196F3!important;
+	background-color:#E9F4FE!important;
+	padding: 0.6rem 1.2rem!important;
+}
+tr.selected img[src="https://ck2-app-tst-1.obc.local/Runtime/Style/eye.png"]{
+	filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(89deg) brightness(103%) contrast(101%);
 }
 /* TABLE BRANDING END */
 @media(min-width:1600px){
