--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -522,6 +522,11 @@ html:not(.designer) .SourceCode-Forms-Controls-Web-Button{
 	color:white!important;
 	padding: .7rem 2.5rem;
 	font-weight:400;
+	transition:all .3s ease-in-out;
+}
+html:not(.designer) [name*="OBB_button OBB_primary_button"]:hover,
+html:not(.designer) .SourceCode-Forms-Controls-Web-Button:hover{
+	background-color:var(--orange-hover)!important;
 }
 html:not(.designer) [name="RFQTenderCreation_Button  OBB_button OBB_primary_button"]{
 	margin:0;
