--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -662,6 +662,9 @@ html:not(.designer) .popup.dialog{
     height:fit-content!important;
     border-radius:1rem!important;
     overflow:hidden;
+    top: 11%!important;
+    left: 36%!important;
+    transform: translate(0%, 0%);
 }
 html:not(.designer) .popup.dialog .popup-header .popup-header-text{
     font-size:1.4rem;
