--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -658,13 +658,20 @@ html:not(.designer) .theme-entry .popup-footer{
 	margin: 0!important;
 	width: 100%;
 }
+html:not(.designer) .popupManager{
+	height:100vh!important;
+	width:100%!important;
+	left: 0!important;
+	position: fixed!important;
+	z-index: 1;
+}
 html:not(.designer) .popup.dialog{
     height:fit-content!important;
     border-radius:1rem!important;
     overflow:hidden;
-    top: 11%!important;
-    left: 36%!important;
-    transform: translate(0%, 0%);
+    top: 50%!important;
+    left: 50%!important;
+    transform: translate(-50%, -50%);
 }
 html:not(.designer) .popup.dialog .popup-header .popup-header-text{
     font-size:1.4rem;
