--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -658,7 +658,7 @@ html:not(.designer) .theme-entry .popup-footer{
 	margin: 0!important;
 	width: 100%;
 }
-html:not(.designer) .popupManager{
+html:not(.designer) .popupManager[style*="absolute"]{
 	height:100vh!important;
 	width:100%!important;
 	left: 0!important;
