--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -9,6 +9,38 @@
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
+html:not(.designer) .tab-box-tabs{
+	padding: 0 1rem;
+	background-color:white;
+	margin-bottom: 0rem;
+	border-bottom:1px solid var(--borderColor)!important;
+	position:fixed!important;
+	top: 6rem;
+	width: calc(100vw - 18rem);
+	z-index: 2;
+	left: 15rem;
+}
+html:not(.designer) .tab-box-tabs li .tab{
+	position:relative;
+	padding: 2rem 0 2rem !important;
+	color:#565656!important;
+	font-family:var(--regularFont);
+}
+html:not(.designer) body *{
+	font-family:var(--regularFont)!important;
+}
+html:not(.designer) .tab-box-tabs li .tab.selected{
+	color:#131313!important;
+}
+html:not(.designer) .tab-box-tabs li .tab.selected::after{
+	content:"";
+	position:absolute;
+	width:100%;
+	height:.3rem;
+	background-color:var(--orange);
+	bottom:0;
+	left:0;
+}
 html:not(.designer) [name="SignUpButton"]:hover,
 html:not(.designer) [name="LoginButton"]:hover{
     background-color: var(--orange-hover)!important;
