--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -504,6 +504,7 @@ display:flex;
 }
 html:not(.designer) [name*="OBB_Collapse"]{
 	border:1px solid #E8E8E8;
+	background-color: var(--aqua);
 	border-radius:1rem!important;
 	overflow:hidden;
 	margin-bottom: 1rem;
