--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -3,56 +3,16 @@
     --white:#ffffff;
     --aqua:#00A8B5;
     --orange:#E57431;
-    --orange-hover: #a6501d;
+	--orange-hover: #a6501d;
     --description:#3E3E3E;
     --borderColor:#E3E3E3;
     --regularFont:"Co Headline";
     --transition:all .3s ease-in-out;
 }
-html:not(.designer) .tab-box-tabs{
-	padding: 0 1rem;
-	background-color:white;
-	margin-bottom: 0rem;
-	border-bottom:1px solid var(--borderColor)!important;
-	position:fixed!important;
-	top: 6rem;
-	width: calc(100vw - 21rem);
-	z-index: 2;
-	left: 19rem;
-}
-html:not(.designer) .tab-box-tabs li .tab{
-	position:relative;
-	padding: 2rem 0 2rem !important;
-	color:#565656!important;
-	font-family:var(--regularFont);
-}
-html:not(.designer) body *{
-	font-family:var(--regularFont)!important;
-}
-html:not(.designer) .tab-box-tabs li .tab.selected{
-	color:#131313!important;
-}
-html:not(.designer) .tab-box-tabs li .tab.selected::after{
-	content:"";
-	position:absolute;
-	width:100%;
-	height:.3rem;
-	background-color:var(--orange);
-	bottom:0;
-	left:0;
-}
-html:not(.designer) [name="SignUpButton"]:hover,
-html:not(.designer) [name="LoginButton"]:hover{
-    background-color: var(--orange-hover)!important;
-}
 @font-face {
     font-family:"Co Headline" ;
     src: url("https://frontenduiux.github.io/OBB_ETenders/fonts/Co%20Headline.otf");
 	font-weight:400;
-}
-html:not(.designer) [name="SignUpButton"]:hover,
-html:not(.designer) [name="LoginButton"]:hover{
-    background-color: var(--orange-hover)!important;
 }
 /* PADDINGS */
 /* PADDING 1rem - top, bottom, left, right */
@@ -220,7 +180,7 @@ html:not(.designer) header{
 	width:calc(100% - 20rem);
 }
 html:not(.designer){
-    font-size:14px!important;
+    font-size:12px!important;
 }
 html:not(.designer) body{
     margin:0;
@@ -504,7 +464,6 @@ display:flex;
 }
 html:not(.designer) [name*="OBB_Collapse"]{
 	border:1px solid #E8E8E8;
-	background-color: var(--aqua);
 	border-radius:1rem!important;
 	overflow:hidden;
 	margin-bottom: 1rem;
@@ -520,7 +479,7 @@ html:not(.designer) [name*="OBB_Collapse"] .panel-header{
 html:not(.designer) [name*="OBB_Collapse"] .panel-header .panel-header-c .panel-header-wrapper,
 html:not(.designer) [name*="OBB_Collapse"] .grid-header  .grid-header-wrapper{
 	padding:1rem 2rem;
-	background-color:white;
+	background-color: var(--aqua);
 	width: calc(100% - 4rem);
 	height:100%;
 }
@@ -529,6 +488,7 @@ html:not(.designer) [name*="OBB_Collapse"] .grid-header  .grid-header-wrapper .g
 	font-size:1.6rem;
 	font-family:var(--regularFont);
 	padding: 0;
+	color: #ffffff;
 }
 html:not(.designer) [name*="OBB_Collapse"] .panel-body{
 	padding: 1rem 2rem;
@@ -555,11 +515,6 @@ html:not(.designer) .SourceCode-Forms-Controls-Web-Button{
 	color:white!important;
 	padding: .7rem 2.5rem;
 	font-weight:400;
-	transition:all .3s ease-in-out;
-}
-html:not(.designer) [name*="OBB_button OBB_primary_button"]:hover,
-html:not(.designer) .SourceCode-Forms-Controls-Web-Button:hover{
-	background-color:var(--orange-hover)!important;
 }
 html:not(.designer) [name="RFQTenderCreation_Button  OBB_button OBB_primary_button"]{
 	margin:0;
@@ -691,20 +646,10 @@ html:not(.designer) .theme-entry .popup-footer{
 	margin: 0!important;
 	width: 100%;
 }
-html:not(.designer) .popupManager[style*="absolute"]{
-	height:100vh!important;
-	width:100%!important;
-	left: 0!important;
-	position: fixed!important;
-	z-index: 1;
-}
 html:not(.designer) .popup.dialog{
     height:fit-content!important;
     border-radius:1rem!important;
     overflow:hidden;
-    top: 50%!important;
-    left: 50%!important;
-    transform: translate(-50%, -50%);
 }
 html:not(.designer) .popup.dialog .popup-header .popup-header-text{
     font-size:1.4rem;
@@ -722,17 +667,14 @@ html:not(.designer) .theme-entry .grid table.grid-column-header-table td{
 	border-right: 1px solid rgb(220 220 220 / 80%);
 	cursor: pointer;
 }
-html:not(.designer) .theme-entry td span.runtime-list-item{
-	font-family: var(--regularFont)!important;
-	font-weight: 300!important;
-	padding: 1.3rem 1.3rem!important;
-}
 html:not(.designer) .theme-entry .grid table.grid-column-header-table td:last-child{
 	border:none!important;
 }
 html:not(.designer) .theme-entry table.grid-column-header-table {
-    border-bottom: 1px solid rgb(220 220 220 / 80%);
-
+    border: 1px solid rgb(220 220 220 / 80%);
+    border-bottom: none;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
     background-color:transparent!important;
 }
 html:not(.designer) .theme-entry  .grid-column-headers{
@@ -744,138 +686,11 @@ html:not(.designer) .theme-entry .grid .grid-column-header-text{
 html:not(.designer) .theme-entry .grid .grid-column-header-cell{
 	padding:1rem 1.4rem;
 }
-html:not(.designer) .theme-entry .grid table.grid-content-table.zebra-stripes tr{
-	background-color: transparent;
-	padding:1rem 0!important;
-}
-html:not(.designer) .theme-entry .grid table.grid-content-table.zebra-stripes tr:nth-child(even){
-	background-color:#F2F2F6!important;
-}
-html:not(.designer) .grid-body{
-	margin: 1rem!important;
-	width: calc(100% - 2rem);
-	border: 1px solid rgb(220 220 220 / 80%)!important;
-	border-radius: 2rem;
-}
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Saved"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Submitted"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Rejected"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Open"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Approve"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Completed"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting RM Approval"],
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting Return"]{
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	vertical-align:middle;
-	height: 4.4rem!important;
-}
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Saved"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Submitted"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Rejected"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Open"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Approve"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Completed"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting RM Approval"] >span.runtime-list-item,
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Waiting Return"] >span.runtime-list-item{
-	border-radius:2rem;
-	min-height:unset!important;
-	height:unset!important;
-	line-height:unset!important;
-	padding: 0.6rem 2rem!important;
-	width:fit-content!important;
-}
-.grid-content-cell-wrapper[title*="Saved"] >span.runtime-list-item,
-.grid-content-cell-wrapper[title*="Completed"] >span.runtime-list-item{
-	background-color:#DCFCE7;
-	color:#17A34A!important;
-}
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Submitted"] >span.runtime-list-item{
-	background-color:#ECEEF8;
-	color:#3F51B5!important;
-	padding: 0.6rem 1.2rem!important;
-}
-html:not(.designer) .theme-entry  .grid-content-cell-wrapper[title*="Rejected"] >span.runtime-list-item{
-	background-color:#F4EBEE;
-	color:#801533!important;
-	padding: 0.6rem 1.2rem!important;
-}
-html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Waiting RM Approval"] >span{
-	color:#FF9800!important;
-	background-color:#FFF5E5!important;
-	padding: 0.6rem 1.2rem!important;
-}
-html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Waiting Return"] >span{
-	color:#D19D00!important;
-	background-color:#FAF5E5!important;
-	padding: 0.6rem 1.2rem!important;
-}
-html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Approve"] >span{
-	color:#009688!important;
-	background-color:#E5F4F3!important;
-	padding: 0.6rem 1.2rem!important;
-}
-html:not(.designer) .theme-entry .grid-content-cell-wrapper[title*="Open"] >span{
-	color:#2196F3!important;
-	background-color:#E9F4FE!important;
-	padding: 0.6rem 1.2rem!important;
-}
-tr.selected img[src="https://ck2-app-tst-1.obc.local/Runtime/Style/eye.png"]{
-	filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(89deg) brightness(103%) contrast(101%);
-}
-html:not(.designer) [name*="itemSpacing"] .grid-body-content-wrapper{
-	padding:2rem;
-	width:calc(100% - 4rem);
-	height:calc(100% - 4rem);
-}
-
 /* TABLE BRANDING END */
-
-html:not(.designer) .sidebarVisible [name="OBB_header"]{
-	left: 15rem;
-	width: calc(100vw - 15rem);
-	padding-top:1rem!important;
-	padding-bottom:1rem
-}
-html:not(.designer) [name="OBB_header"] > div{
-	display:flex!important;
-	align-items:center;
-	justify-content:space-between;
-	width:100%;
-	
-}
-html:not(.designer) [name*="HeaderTitleContainer"]{
-width:80%;}
-html:not(.designer) [name*="HeaderTitleContainer"] [name*="HeaderTitle"]{
-	font-size: 1.7rem;
-	font-family:var(--regularFont);
-	color:black;
-	padding: 0;
-}
-html:not(.designer) [name*="HeaderDescriptionContainer"] [name*="HeaderDescription"]{
-	font-size:1rem;
-	color:var(--description);
-	font-family:var(--regularFont);
-	padding-top: 0;
-}
 @media(min-width:1600px){
 .sidebar {
     width: 12vw;
     padding: 2vw;
-}
-	html:not(.designer) .tab-box-tabs{
-	padding: 0 1vw;
-	top: 6vw;
-	width: calc(100vw - 18vw);
-	z-index: 2;
-	left: 15vw;
-}
-	html:not(.designer) .theme-entry.sidebarAvailable{
-	left: 16vw;
-	width: calc(100%  - 16vw);
-	padding: 0 1vw;
-	position: relative;
 }
 .navbarBrand a{width: 9vw;}
 }
