--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -914,24 +914,16 @@ font-size:8pt!important;
 	justify-content:center;
 	transition:all .3s ease-in-out;
 	padding: 1rem;
-	/* margin: 1rem; */
 	background-image: url("https://frontenduiux.github.io/OBB_Services/Images/backgroundimage.png");
 	background-size: 116%;
 	background-repeat:no-repeat;
 	background-position:center;
 	transition:all .3s ease-in-out;
-	/* margin: 0 auto!important; */
 	margin-bottom: 0rem;
 }
 .SFC[name*="OBB_Service"]:hover{
 	background-size:126%;
 }
-.SFC[name*="OBB_Service"]:nth-child(3n+1){
-	/* margin-left:0; */
-}
-/* [name*="OBB_Service"]:hover{
-background-color:#00a9b550;;
-} */
 [name*="OBB_ServiceIcon"]{
 	width:4rem!important;
 	height:auto!important;
@@ -1204,13 +1196,13 @@ html:not(.designer) img#\30 9a5c432-698e-951e-a5dc-30c1149241b3_8c40e4b4-a56c-25
 html:not(.designer) img#aaa2922e-a9d6-57b9-4b35-a5e16e1477be_8c40e4b4-a56c-2593-e555-118c658111a0_Picture{
     width: 10rem !important;
 }
-html:not(.designer) .sidebarAvailable [name="OBB_header"]{
-	left: 15rem;
-	width: calc(100vw - 15rem);
+html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
+	left: 16rem;
+	width: calc(100vw - 16rem);
 	padding-top:1rem!important;
 	padding-bottom:1rem
 }
-html:not(.designer) [name="OBB_header"] > div{
+html:not(.designer) [name*="OBB_header"] > div{
 	display:flex!important;
 	align-items:center;
 	justify-content:space-between;
