--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1189,6 +1189,9 @@ html:not(.designer) [name*="Button Return"]:hover{
 	border:1px solid var(--orange);
 	color:var(--orange)!important;
 }
+html:not(.designer) .grid-column-header-text {
+	text-transform: capitalize!important;
+}
 div#\35 2514ea1-299d-4d28-b86f-9e90b0bc2e6c_d1c2482c-6b44-446b-990a-c85ec1f18da5_d150917a-0cef-faf7-9774-3dba8d960e78_692d4e30-a9a2-4f51-ac33-21832711b4c0 .panel-body {
     padding: 0;
 }
