--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1184,7 +1184,9 @@ html:not(.designer) [name*="button Cancel"]:hover{
 	background-color: transparent!important;
 }
 html:not(.designer) [name*="Button Return"],
-html:not(.designer) [name*="Button Return"]:hover{
+html:not(.designer) [name*="Button Return"]:hover,
+html:not(.designer) [name*="draftBtn"],
+html:not(.designer) [name*="draftBtn"]:hover{
 	background-color:rgb(229 116 49 / 10%)!important;
 	border:1px solid var(--orange);
 	color:var(--orange)!important;
