--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -925,6 +925,9 @@ font-size:8pt!important;
 .SFC[name*="OBB_Service"]:hover{
 	background-size:126%;
 }
+.SFC[name*="OBB_Service"]:nth-child(3n+1){
+	/* margin-left:0; */
+}
 /* [name*="OBB_Service"]:hover{
 background-color:#00a9b550;;
 } */
@@ -1217,10 +1220,15 @@ td#\30 64aa9f2-8dc0-4e3d-b02f-7e1ee8742977,
 html:not(.designer) body.theme-entry [name*="kpiContainer"]{
 	display:flex!important;
 	flex-direction:column!important;
-	align-items:flex-start!important;
-	justify-content:flex-start!important;
+	align-items: flex-start!important;
+	justify-content: flex-end;
 	border:1px solid var(--borderColor)!important;
 	border-radius:.7rem;
+	text-align: left;
+	padding:.5rem;
+}
+html:not(.designer) body.theme-entry [name*="kpiContainer"] span{
+	width:100%;
 }
 @media(min-width:1600px){
 	html:not(.designer) .tab-box-tabs{
