--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -242,7 +242,7 @@ html:not(.designer) [name*="OBB_header"]{
 	background-color:#F2F2F6;
 	position: fixed;
 	top: 0;
-	left:0;
+	left: 0;
 	width:100%;
 	z-index: 2;
 	/* height: 6rem; */
@@ -1229,6 +1229,10 @@ html:not(.designer) body.theme-entry [name*="kpiContainer"]{
 }
 html:not(.designer) body.theme-entry [name*="kpiContainer"] span{
 	width:100%;
+}
+html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
+    left: 15rem;
+    width: calc(100vw - 15rem);
 }
 @media(min-width:1600px){
 	html:not(.designer) .tab-box-tabs{
