--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -14,7 +14,7 @@ html:not(.designer) .SourceCode-Forms-Controls-Web-Button:hover{
 	background-color:var(--orange-hover)!important;
 }
 html:not(.designer) .tab-box-tabs{
-	padding: 0 1rem;
+	padding: 1rem;
 	background-color:white;
 	margin-bottom: 0rem;
 	border-bottom:1px solid var(--borderColor)!important;
@@ -1211,9 +1211,10 @@ html:not(.designer) img#aaa2922e-a9d6-57b9-4b35-a5e16e1477be_8c40e4b4-a56c-2593-
 td#\39 9e0a7a0-73d3-eba6-9232-e7c5509f59df,
 td#\30 64aa9f2-8dc0-4e3d-b02f-7e1ee8742977,
 .toolbar-wrapper>table>tbody>tr:first-child > td:first-child {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: flex-end; */
+    /* height: unset; */
 }
 /* Table Toolbar Buttons Alignment End */
 /* BUTTONS BRANDING START */
