--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1239,11 +1239,12 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
     width: calc(100vw - 15rem);
 }
 .popupManager[style*="position: absolute;"]{
-	height: 100vh;
-	width: 100vw;
-	position: fixed;
-	top: 0;
-	left: 0;
+	height: 100vh!important;
+	width: 100vw!important;
+	position: fixed!important;
+	top: 0!important;
+	left: 0!important;
+	z-index: 2;
 }
 .popup.dialog{
 	top: 50%!important;
