--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1239,6 +1239,10 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
 	transform: translate(-50%,-50%);
 }
 @media(min-width:1600px){
+	html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
+    left: 16vw;
+    width: calc(100vw - 16vw);
+}
 	html:not(.designer) body.topbarExists{
 	margin-top:13.3vw;
 }
