--- a/Styles/mainstyles.css
+++ b/Styles/mainstyles.css
@@ -1239,6 +1239,9 @@ html:not(.designer) .sidebarAvailable [name*="OBB_header"]{
 	transform: translate(-50%,-50%);
 }
 @media(min-width:1600px){
+	html:not(.designer) body{
+    margin-top: 7vw;
+}
 	html:not(.designer) .theme-entry.sidebarAvailable {
     left: 16vw;
     width: calc(100% - 16vw);
